--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <a href="about.html">About</a>
     </nav>
 
-    <h1>Welcome to My Portfolio</h1>
+<h1>Welcome to My Portfolio - Version A</h1>
 </body>
 </html>
