--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <a href="about.html">About</a>
     </nav>
 
-<h1>Welcome to My Portfolio - Version A</h1>
+<h1>Welcome to My Portfolio - Version B</h1>
+
 </body>
 </html>
