--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a href="about.html">About</a>
     </nav>
 
-<h1>Welcome to My Portfolio - Version A</h1>
+<h1>Welcome to My Portfolio Shahed</h1>
 
 
 </body>
